--- a/src/main/resources/templates/admin/piatti.html
+++ b/src/main/resources/templates/admin/piatti.html
@@ -9,19 +9,21 @@
 
 <body>
 	<div>
-		<h1>Elenco piatti</h1>
+		<h1>I nostri piatti</h1>
 		<img src="/images/piatto2.jpg" alt="A course" width="70%" />
 		<p>
 		<table>
-			<thead th:unless="${piatti.isEmpty()}">PIATTI</thead>
+			<thead th:unless="${piatti.isEmpty()}"></thead>
 			<tr th:each="piatto : ${piatti}">
 				<td><a href="admin/piatto.html" th:href="@{'/admin/piatto' + '/' + ${piatto.id}}"
 						th:text="${piatto.nome}">Piatto di prova</a></td>
 				<!--- <td><a href="confermaCancellazionePiatto.html" th:href="@{'/admin/toDeletePiatto' + '/' + ${piatto.id}}"
 					th:text="Cancella">Cancella</a></td> -->
 				<td>
-					<a class="button" href="confermaCancellazionePiatto.html"
-						th:href="@{'/admin/toDeletePiatto' + '/' + ${piatto.id}}" th:text="Cancella">Cancella</a>
+					<div class="button">
+						<a class="button" href="confermaCancellazionePiatto.html"
+							th:href="@{'/admin/toDeletePiatto' + '/' + ${piatto.id}}" th:text="Cancella">Cancella</a>
+					</div>
 				</td>
 			</tr>
 		</table>
