--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,12 +9,13 @@
 
 <body>
 	<div>
-		<h1>Homepage di <em>SIW Catering</em></h1>
-		<h2>Benvenuto in <em>SIW Catering</em>, il nuovissimo sistema informativo per gestire servizi di catering!</h2>
+		<h1>Homepage</h1>
+		<h2>Benvenuto in <em>SIW Catering</em>, il sistema informativo per gestire servizi di catering !</h2>
+		<h2>Scopri buffet, piatti, ingredienti e gli chef che ne curano la preparazione</h2>
 		<div id="image">
 			<img src="images/catering.jpg" alt="A catering" width="70%" />
 		</div>
-		<p>
+		<p class="text-center">
 			<span>Se sei un nuovo utente, registrati subito! Altrimenti accedi con le tue credenziali</span>
 		</p>
 		<p>
