--- a/src/main/resources/templates/user/buffets.html
+++ b/src/main/resources/templates/user/buffets.html
@@ -9,11 +9,11 @@
 
 <body>
 	<div>
-		<h1>Elenco buffet</h1>
+		<h1>I nostri buffet</h1>
 		<img src="/images/buffet.jpg" alt="A buffet">
 		<p>
 		<table>
-			<thead th:unless="${buffets.isEmpty()}">BUFFET</thead>
+			<thead th:unless="${buffets.isEmpty()}"></thead>
 			<tr th:each="buffet : ${buffets}">
 				<td><a href="user/buffet.html" th:href="@{'/user/buffet' + '/' + ${buffet.id}}"
 						th:text="${buffet.nome}">Buffet di prova</a></td>
