--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -1,3 +1,7 @@
+h2, h3 {
+	margin-top: -20px;
+}
+
 body {
   	font-family: Helvetica;
   	background-color: white;
@@ -18,21 +22,46 @@ table {
 
 td {
 	padding-right: 20px;
+	text-align: justify;
 }
 
-#singletd {
-	padding-right: 10px;
-}
-
-a.button {
-	font-size: 75%;
+div.button {
+	font-size: inherit;
 	padding-top: -10px;
 	padding-bottom: -10px;
 	margin-left: 15px;
 	color: black;
 	border: solid;
+	border-radius: 3px;
     background-color: lightgrey;
     text-decoration: inherit;
+}
+
+a.button {
+	font-size: inherit;
+	padding-top: -10px;
+	padding-bottom: -10px;
+	margin-left: 15px;
+	margin-right: 15px;
+	color: black;
+    background-color: lightgrey;
+    text-decoration: inherit;
+}
+
+a {
+	text-decoration: none;
+}
+
+div.button a:hover {
+	color: black;
+}
+
+a:hover {
+	color: orange;
+}
+
+a:active {
+	color: red;
 }
 
 footer {
