--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -5,6 +5,7 @@ h1, h2 {
 body {
 	background:cornflowerblue;
   	font-family: Helvetica;
+  	font-size: 150%;
 }
 
 #image {
@@ -33,15 +34,43 @@ button {
 	font-size: inherit;
 }
 
-a.button {
+div.button {
 	font-size: inherit;
 	padding-top: -10px;
 	padding-bottom: -10px;
 	margin-left: 15px;
 	color: black;
 	border: solid;
+	border-radius: 3px;
     background-color: lightgrey;
     text-decoration: inherit;
+}
+
+a.button {
+	font-size: inherit;
+	padding-top: -10px;
+	padding-bottom: -10px;
+	margin-left: 15px;
+	margin-right: 15px;
+	color: black;
+    background-color: lightgrey;
+    text-decoration: inherit;
+}
+
+a {
+	text-decoration: none;
+}
+
+div.button a:hover {
+	color: black;
+}
+
+a:hover {
+	color: orange;
+}
+
+a:active {
+	color: red;
 }
 
 .text-center {
