--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -1,3 +1,7 @@
+h2, h3 {
+	margin-top: -20px;
+}
+
 body {
   	font-family: Helvetica;
   	background-color: white;
@@ -5,26 +9,17 @@ body {
   	font-size: 150%;
 }
 
-select {
-	font-family: Helvetica;
-  	background-color: white;
-  	font-size: 75%;
-}
-
 table {
 	margin-left:auto;
 	margin-right: auto;
 }
 
-a.button {
-	font-size: 75%;
-	padding-top: -10px;
-	padding-bottom: -10px;
-	margin-left: 15px;
-	color: black;
-	border: solid;
-    background-color: lightgrey;
-    text-decoration: inherit;
+a {
+	text-decoration: none;
+}
+
+a:hover {
+	color: orange;
 }
 
 footer {
