--- a/src/main/resources/templates/admin/buffets.html
+++ b/src/main/resources/templates/admin/buffets.html
@@ -9,20 +9,28 @@
 
 <body>
 	<div>
-		<h1>Elenco buffet</h1>
+		<h1>I nostri buffet</h1>
 		<img src="/images/buffet.jpg" alt="A buffet">
 		<p>
 		<table>
-			<thead th:unless="${buffets.isEmpty()}">BUFFET</thead>
+			<thead th:unless="${buffets.isEmpty()}"></thead>
 			<tr th:each="buffet : ${buffets}">
 				<td><a href="admin/buffet.html" th:href="@{'/admin/buffet' + '/' + ${buffet.id}}"
 						th:text="${buffet.nome}">Buffet di prova</a></td>
 				<!--- <td><a href="confermaCancellazioneBuffet.html" th:href="@{'/admin/toDeleteBuffet' + '/' + ${buffet.id}}"
 					th:text="Cancella">Cancella</a></td> -->
-				<td><a class="button" href="confermaCancellazioneBuffet.html"
-						th:href="@{'/admin/toDeleteBuffet' + '/' + ${buffet.id}}" th:text="Cancella">Cancella</a></td>
-				<td><a class="button" href="buffetForm2.html"
-						th:href="@{'/admin/modifyBuffet' + '/' + ${buffet.id}}" th:text="Modifica">Modifica</a></td>
+				<td>
+					<div class="button">
+						<a class="button" href="confermaCancellazioneBuffet.html"
+							th:href="@{'/admin/toDeleteBuffet' + '/' + ${buffet.id}}" th:text="Cancella">Cancella</a>
+					</div>
+				</td>
+				<td>
+					<div class="button">
+						<a class="button" href="buffetForm2.html"
+							th:href="@{'/admin/modifyBuffet' + '/' + ${buffet.id}}" th:text="Modifica">Modifica</a>
+					</div>
+				</td>
 			</tr>
 		</table>
 		</p>
