--- a/src/main/resources/templates/user/chef.html
+++ b/src/main/resources/templates/user/chef.html
@@ -9,19 +9,12 @@
 
 <body>
 	<div>
-		<h1>Dettagli chef</h1>
+		<h1 th:text="${chef.nome} + ' ' + ${chef.cognome}"></h1>
+		<h3>
+			<em th:unless="${chef.nazionalita.isEmpty()}" th:text="${chef.nazionalita}">Prova</em>
+		</h3>
 		<img src="/images/chef.jpg" alt="A chef" width="70%" />
 		<p>
-		<div>
-			<!-- <span>Nome: </span> -->
-			<strong th:text="${chef.nome}">Raffaello</strong>
-			<!-- <span>Cognome: </span> -->
-			<strong th:text="${chef.cognome}">Sanzio</strong>
-		</div>
-		<div>
-			<!-- <span>Nazionalità: </span> -->
-			<em th:unless="${chef.nazionalita.isEmpty()}" th:text="${chef.nazionalita}">Prova</em>
-		</div>
 		<div>
 			<p>
 				<span th:if="${buffets.isEmpty()}">Non ci sono buffet per questo chef</span>
