--- a/src/main/resources/templates/admin/buffets.html
+++ b/src/main/resources/templates/admin/buffets.html
@@ -27,7 +27,7 @@
 				</td>
 				<td>
 					<div class="button">
-						<a class="button" href="buffetForm2.html"
+						<a class="button" href="modificaBuffetForm.html"
 							th:href="@{'/admin/modifyBuffet' + '/' + ${buffet.id}}" th:text="Modifica">Modifica</a>
 					</div>
 				</td>
